added vercel file

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,9 @@
 {
-    "routes": [
-      { "src": "/", "dest": "/signin" }
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/signin"
+      }
     ]
   }
+  
