--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^3.6.6",
+
     "mongoose": "^8.1.2",
-    "nodemon": "^3.0.2",
     "zod": "^3.22.4"
   }
 }
