--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^4.4.0",
     "mongoose": "^5.13.0",
-    "mongodb": "^4.4.0"
-,    
     "zod": "^3.22.4"
   }
 }
