--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.9",
+    "@vercel/analytics": "^1.2.0",
     "axios": "^1.6.7",
     "consola": "^3.2.3",
     "qrcode.react": "^3.1.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.21.3",
+    "vercel": "^33.5.1",
     "vite-plugin-style-import": "^2.0.0"
   },
   "devDependencies": {
