--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,10 +7,8 @@
       }
     ],
     "routes": [
-      { "src": "/signin", "dest": "/index.js" },
-      { "src": "/signup", "dest": "/index.js" },
-      { "src": "/dashboard", "dest": "/index.js" },
-      { "src": "/(.*)", "dest": "/index.js" }
+      { "src": "/(.*)", "dest": "/index.html" }
+
     ]
   }
   
